<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_married"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zaneg.taxcalculatorapp.Married">

    <TextView
        android:text="@string/txtMarriedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtMarriedTitle"
        android:textSize="35sp"
        android:textColor="@color/bright_green" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/marriedmoney"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/txtDescription" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextIncome"
        android:layout_alignLeft="@+id/editTextIncome"
        android:layout_alignStart="@+id/editTextIncome" >

        <RadioButton
            android:text="@string/radioUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioUse"
            android:layout_weight="1"
            android:checked="true"
            android:textColor="@color/bright_green"
            android:textSize="20sp" />

        <RadioButton
            android:text="@string/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioNo"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:textColor="@color/bright_green"
            android:textSize="20sp" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextIncome"
        android:hint="@string/editTxtIncome"
        android:textColorHint="@color/light_green"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtResult"
        android:textSize="30sp"
        android:textColor="@color/bright_green" />

    <Button
        android:text="@string/btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnShow"
        android:textSize="25sp"
        android:layout_marginBottom="22dp"
        android:layout_above="@+id/txtResult"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
